// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactIdSwiper rendering snapshot Custom container & wrapper it should render with custom container & wrapper 1`] = `
<section
  class="swiper-container"
>
  <section
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </section>
</section>
`;

exports[`ReactIdSwiper rendering snapshot Default it should render default swiper 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
</div>
`;

exports[`ReactIdSwiper rendering snapshot Navigation it should render navigation buttons 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
  <div
    class="swiper-button-next"
  />
  <div
    class="swiper-button-prev"
  />
</div>
`;

exports[`ReactIdSwiper rendering snapshot Navigation it should render pagination with customized class name 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
  <div
    class="swiper-button-next"
  />
  <div
    class="swiper-button-prev"
  />
</div>
`;

exports[`ReactIdSwiper rendering snapshot Navigation it should render pagination with customized function 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
  <div
    class="swiper-button-next"
  />
  <div
    class="swiper-button-prev"
  />
</div>
`;

exports[`ReactIdSwiper rendering snapshot No swiping it should render slide with swiper-no-swiping class name 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide  swiper-no-swiping"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide  swiper-no-swiping"
    >
      Slide 2
    </div>
  </div>
</div>
`;

exports[`ReactIdSwiper rendering snapshot Pagination it should render pagination 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
  <div
    class="swiper-pagination"
  />
</div>
`;

exports[`ReactIdSwiper rendering snapshot Pagination it should render pagination with customized class name 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
  <div
    class="swiper-pagination"
  />
</div>
`;

exports[`ReactIdSwiper rendering snapshot Pagination it should render pagination with customized function 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
  <div
    class="swiper-pagination"
  />
</div>
`;

exports[`ReactIdSwiper rendering snapshot Parallax it should render parallax 1`] = `
<div
  class="swiper-container"
>
  <div
    class="parallax-bg"
    data-swiper-parallax="-23%"
  />
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
</div>
`;

exports[`ReactIdSwiper rendering snapshot Parallax it should render parallax 2`] = `
<div
  class="swiper-container"
>
  <div
    class="parallax-bg"
    data-swiper-parallax="-23%"
  />
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
</div>
`;

exports[`ReactIdSwiper rendering snapshot RTL it should render with rtl 1`] = `
<div
  class="swiper-container"
  dir="rtl"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
</div>
`;

exports[`ReactIdSwiper rendering snapshot Scrollbar it should render scrollbar 1`] = `
<div
  class="swiper-container"
>
  <div
    class="swiper-wrapper"
  >
    <div
      class="swiper-slide"
    >
      Slide 1
    </div>
    <div
      class="swiper-slide"
    >
      Slide 2
    </div>
  </div>
  <div
    class="swiper-scrollbar"
  />
</div>
`;
